MoinMoin/themes/basic/static/css/basic.css
/* ... */
.hidden {
  display: none !important;
  visibility: hidden !important;
}
.visible-sm {
  display: block !important;
}
tr.visible-sm {
  display: table-row !important;
}
th.visible-sm,
td.visible-sm {
  display: table-cell !important;
}
.visible-md {
  display: none !important;
}
tr.visible-md {
  display: none !important;
}
th.visible-md,
td.visible-md {
  display: none !important;
}
.visible-lg {
  display: none !important;
}
tr.visible-lg {
  display: none !important;
}
th.visible-lg,
td.visible-lg {
  display: none !important;
}
.hidden-sm {
  display: none !important;
}
tr.hidden-sm {
  display: none !important;
}
th.hidden-sm,
td.hidden-sm {
  display: none !important;
}
.hidden-md {
  display: block !important;
}
tr.hidden-md {
  display: table-row !important;
}
th.hidden-md,
td.hidden-md {
  display: table-cell !important;
}
.hidden-lg {
  display: block !important;
}
tr.hidden-lg {
  display: table-row !important;
}
th.hidden-lg,
td.hidden-lg {
  display: table-cell !important;
}
@media (min-width: 768px) and (max-width: 991px) {
  .visible-sm {
    display: none !important;
  }
  tr.visible-sm {
    display: none !important;
  }
  th.visible-sm,
  td.visible-sm {
    display: none !important;
  }
  .visible-md {
    display: block !important;
  }
  tr.visible-md {
    display: table-row !important;
  }
  th.visible-md,
  td.visible-md {
    display: table-cell !important;
  }
  .visible-lg {
    display: none !important;
  }
  tr.visible-lg {
    display: none !important;
  }
  th.visible-lg,
  td.visible-lg {
    display: none !important;
  }
  .hidden-sm {
    display: block !important;
  }
  tr.hidden-sm {
    display: table-row !important;
  }
  th.hidden-sm,
  td.hidden-sm {
    display: table-cell !important;
  }
  .hidden-md {
    display: none !important;
  }
  tr.hidden-md {
    display: none !important;
  }
  th.hidden-md,
  td.hidden-md {
    display: none !important;
  }
  .hidden-lg {
    display: block !important;
  }
  tr.hidden-lg {
    display: table-row !important;
  }
  th.hidden-lg,
  td.hidden-lg {
    display: table-cell !important;
  }
}
@media (min-width: 992px) {
  .visible-sm {
    display: none !important;
  }
  tr.visible-sm {
    display: none !important;
  }
  th.visible-sm,
  td.visible-sm {
    display: none !important;
  }
  .visible-md {
    display: none !important;
  }
  tr.visible-md {
    display: none !important;
  }
  th.visible-md,
  td.visible-md {
    display: none !important;
  }
  .visible-lg {
    display: block !important;
  }
  tr.visible-lg {
    display: table-row !important;
  }
  th.visible-lg,
  td.visible-lg {
    display: table-cell !important;
  }
  .hidden-sm {
    display: block !important;
  }
  tr.hidden-sm {
    display: table-row !important;
  }
  th.hidden-sm,
  td.hidden-sm {
    display: table-cell !important;
  }
  .hidden-md {
    display: block !important;
  }
  tr.hidden-md {
    display: table-row !important;
  }
  th.hidden-md,
  td.hidden-md {
    display: table-cell !important;
  }
  .hidden-lg {
    display: none !important;
  }
  tr.hidden-lg {
    display: none !important;
  }
  th.hidden-lg,
  td.hidden-lg {
    display: none !important;
  }
}
.visible-print {
  display: none !important;
}
tr.visible-print {
  display: none !important;
}
th.visible-print,
td.visible-print {
  display: none !important;
}
@media print {
  .visible-print {
    display: block !important;
  }
  tr.visible-print {
    display: table-row !important;
  }
  th.visible-print,
  td.visible-print {
    display: table-cell !important;
  }
  .hidden-print {
    display: none !important;
  }
  tr.hidden-print {
    display: none !important;
  }
  th.hidden-print,
  td.hidden-print {
    display: none !important;
  }
}
.moin-breadcrumb {
  padding: 8px 15px;
  margin-bottom: 20px;
  list-style: none;
  background-color: #f5f5f5;
  border-radius: 4px;
}
.moin-breadcrumb > li {
  display: inline-block;
}
.moin-breadcrumb > li + li:before {
  content: "/\00a0";
  padding: 0 5px;
  color: #cccccc;
}
.moin-breadcrumb > .active {
  color: #999999;
}
.moin-breadcrumb > li + li:before {
  content: "»";
}
.moin-nav {
  margin-bottom: 0;
  padding-left: 0;
  list-style: none;
  margin-bottom: 20px;
}
.moin-nav:before,
.moin-nav:after {
  content: " ";
  /* 1 */

  display: table;
  /* 2 */

}
.moin-nav:after {
  clear: both;
}
.moin-nav:before,
.moin-nav:after {
  content: " ";
  /* 1 */

  display: table;
  /* 2 */

}
.moin-nav:after {
  clear: both;
}
.moin-nav > li {
  position: relative;
  display: block;
}
.moin-nav > li > a {
  position: relative;
  display: block;
  padding: 10px 15px;
}
.moin-nav > li > a:hover,
.moin-nav > li > a:focus {
  text-decoration: none;
  background-color: #eeeeee;
}
.moin-nav > li.disabled > a {
  color: #999999;
}
.moin-nav > li.disabled > a:hover,
.moin-nav > li.disabled > a:focus {
  color: #999999;
  text-decoration: none;
  background-color: transparent;
  cursor: not-allowed;
}
.moin-nav.open > a,
.moin-nav.open > a:hover,
.moin-nav.open > a:focus {
  color: #ffffff;
  background-color: #428bca;
  border-color: #428bca;
}
.moin-nav.open > a .caret,
.moin-nav.open > a:hover .caret,
.moin-nav.open > a:focus .caret {
  border-top-color: #ffffff;
  border-bottom-color: #ffffff;
}
.moin-nav > .pull-right {
  float: right;
}
.moin-nav .nav-divider {
  height: 1px;
  margin: 9px 0;
  overflow: hidden;
  background-color: #e5e5e5;
}
.moin-shadow > li > a:focus {
  border-color: #66afe9;
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
}
.moin-location-breadcrumb {
  padding-top: 12px;
}
.moin-nonexistent {
  color: #e7908e;
}
.moin-nonexistent:hover {
  color: #d9534f;
}
.moin-sidebar {
  margin-bottom: 20px;
  padding-left: 0;
  overflow: hidden;
}

